[package]
name = "sage_mqtt"
version = "0.1.6"
authors = ["Kevin D'ORANGE <kevin.dorange@gmail.com>"]
edition = "2018"
description = "Manipulate MQTT 5.0 data types"
readme = "README.md"
repository = "https://github.com/OragonEfreet/sage_mqtt"
license = "MIT"
keywords = ["mqtt"]
categories = ["data-structures", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode_reader = "1.0.0"

